# Barriers

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  ChangeLog.md  Makefile.am  Makefile.in  README  README.md  acconfig.h  autogen.sh  bar_map.pl  barrier.pm  barrier_types.h  barriers.1  barriers.c  barriers.ggo  barriers.h  barriers.lsm.in  barriers.spec.in  barriers.texinfo  check_rnamoves.c  compile_hb.sh  compress.c  compress.h  configure  configure.ac  configure.in  crossrates.pl  fix_bar.pl  get_hashbits.pl  hash.h  hash_util.c  hash_util.h  main.c  mkinstalldirs  moves.c  pair_mat.h  ringlist.c  (+20 more)
PoHo/: Makefile.in  poho_generate.c
PoHo/Examples/: README  n10_3_4_tree.ps  poho_n10_3_4  to_bar_in.pl
SECIS/: .cvsignore  Makefile.am  secis_basics.cpp  secis_basics.h  secis_constraints.cpp  secis_find_seq.cpp  secis_generate.h  secis_neighbors.h  secis_struct.cpp  secis_struct.h
SECIS/Examples/: README  m9s30.bar  m9s30_bar.in  m9s30_tree.ps  secis.txt  to_bar_in.pl
data/: XFILE  XFILE2  d29.e20.bar  d29.seq  rates.out  tree.ps
data/LP/: XFILE  d29.e20.LP.bound.bar  d29.e20.LP.r.bar  d29.e20.LP.unbound.bar  rates.out  tree.ps  treeR.ps
data/noLP/: XFILE  d29.e30.noLP.bar  d29.e30.noLP.bound.bar  d29.e30.noLP.r.bar  d29.e30.noLP.unbound.bar  rates.out  tree.ps  treeR.ps
m4/: ac_colorize.m4
man/: .gitignore  Makefile.am  barriers.texinfo
man/include/: barriers.inc
packaging/: .gitignore  PKGBUILD.in  barriers.lsm.in  barriers.spec.in
packaging/debian/: barriers.install  changelog  control  copyright  perl-rna-barrier.install  rules
perl/: Makefile.am  bar_map.pl  fix_bar.pl  get_hashbits.pl  saddle.pl  saddle2dot.pl  saddle2gml.pl  treeplot.pl
scripts/: crossrates.pl
src/: Makefile.am  barrier_types.h  barriers.c  barriers.ggo  barriers.h  compress.c  compress.h  hash_tables.c  hash_tables.h  hash_util.c  hash_util.h  main.c  moves.c  pair_mat.h  ringlist.c  ringlist.h  rnamoves.c  rnamoves.h  simple_set.c  simple_set.h  stapel.c  stapel.h  tree_types.h  treeplot.c  treeplot.h  trees.c  trees.h  utils.c  utils.h
src/PoHo/: Makefile.am  poho_generate.c
src/PoHo/Examples/: n10_3_4.bar  n10_3_4_bar.in
src/SECIS/: Makefile.am  secis_basics.cpp  secis_basics.h  secis_constraints.cpp  secis_constraints.h  secis_find_seq.cpp  secis_generate.cpp  secis_generate.h  secis_neighbors.cpp  secis_neighbors.h  secis_struct.cpp  secis_struct.h
src/SECIS/Examples/: m9s30.bar  m9s30_tree.ps  sequences_m9_s30
src/hash_table_linear_probing_lists/: hash_tables.c  hash_tables.h
test/: packtest.c
tests/: .gitignore  Makefile.am  check_rnamoves.c
