dnl Process this file with autoconf to produce a configure script.

AC_INIT(barriers.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(barriers, 0.9.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl configure options
AM_WITH_DMALLOC
AC_ARG_WITH(hash-bits,
[  --with-hash-bits=ARG    use hashtable with 2^ARG entries (<32, default 24)],
AC_DEFINE_UNQUOTED(HASHBITS,$withval))

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

AC_C_INLINE

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile barriers.lsm barriers.spec)
