# $Id: Makefile.am,v 1.1 2006/07/25 14:34:55 xtof Exp $
# Last changed Time-stamp: <2006-07-24 17:11:44 xtof>
bin_PROGRAMS = genPoHoLandscape
genPoHoLandscape_SOURCES = poho_generate.c
genPoHoLandscape_INCLUDES = -I../
genPoHoLandscape_LDADD = -lm
EXTRA_DIST = Examples/n10_3_4.bar \
             Examples/n10_3_4_bar.in \
             Examples/n10_3_4_tree.ps \
             Examples/poho_n10_3_4 \
             Examples/README \
             Examples/to_bar_in.pl

