bin_PROGRAMS = genPoHoLandscape
genPoHoLandscape_SOURCES = poho_generate.c
genPoHoLandscape_INCLUDES = -I../
genPoHoLandscape_LDADD = -lm
EXTRA_DIST = Examples/n10_3_4.bar \
             Examples/n10_3_4_bar.in \
             Examples/n10_3_4_tree.ps \
             Examples/poho_n10_3_4 \
             Examples/README \
             Examples/to_bar_in.pl

